fix TopSongItems button error and update playlist gap

--- a/src/views/HomePage/components/PlaylistItems/PlaylistItems.module.scss
+++ b/src/views/HomePage/components/PlaylistItems/PlaylistItems.module.scss
@@ -1,5 +1,5 @@
 .playlist-items-container {
   display: flex;
   justify-content: space-between;
-  gap: 10px;
+  gap: 15px;
 }
