--- a/src/views/HomePage/components/TopSongItems/TopSongItems.module.scss
+++ b/src/views/HomePage/components/TopSongItems/TopSongItems.module.scss
@@ -5,6 +5,7 @@
   row-gap: 15px;
 
   .top-song-items-button {
-    text-align: center;
+    display: flex;
+    justify-content: center;
   }
 }
